--- a/app/views/items/_footer.html.haml
+++ b/app/views/items/_footer.html.haml
@@ -68,19 +68,19 @@
         %ul
           %li
             = link_to "/items" ,class: "footer-main-cell__head--overseas-link" do
-              = image_tag("flag_us.png", alt: "united states", class: "country_img")
+              = image_tag("flag_us.png", alt: "united states", class: "country-img")
               United States/
           %li
             = link_to "/items" ,class: "footer-main-cell__head--overseas-link" do
-              = image_tag("flag_uk.png", alt: "united kingdom", class: "country_img")
+              = image_tag("flag_uk.png", alt: "united kingdom", class: "country-img")
               United Kingdom/
           %li
             = link_to "/items" ,class: "footer-main-cell__head--japan-link" do
-              = image_tag("flag_jp.png", alt: "japan", class: "japan_img")
+              = image_tag("flag_jp.png", alt: "japan", class: "japan-img")
               日本
 
   .footer__logo
-    = link_to "/items" ,class: "footer_logo-link" do
-      = image_tag("logo-white.svg",alt: "logo", class: "footer_logo_img")
+    = link_to "/items" ,class: "footer__logo-link" do
+      = image_tag("logo-white.svg",alt: "logo", class: "footer__logo-link-img")
     .footer__copy-right
       © 2019 Mercari
