edit_footer.scss
クラス名の省略

--- a/app/assets/stylesheets/modules/footer.scss
+++ b/app/assets/stylesheets/modules/footer.scss
@@ -26,7 +26,7 @@
         color: #FFFFFF;
         margin-right: 20px;
 
-        .footer-main-cell__head{
+        &__head{
           font-weight:bold;
           color: #FFFFFF;
           line-height: 50px;
