Create haml file and sass file
Hamlとsass ファイルを作成した。
ヘッダー、フッダー、サイドバーは前回作成したものを部分テンプレートとして再度利用した。
Selectタグについてはコードが長くなるので都道府県と生年月日それぞれ部分テンプレートにした。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,9 @@
 @import "modules/bread-crumps";
 @import "modules/footer";
 @import "modules/header";
+@import "modules/select-birthday";
+@import "modules/select-prefecture";
 @import "modules/side_bar";
 @import "items/index";
 @import "users/show";
+@import "users/edit";
