--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,6 @@
 @import "_reset";
 @import "font-awesome";
 @import "config/colors";
-@import "modules/bread-crumps";
-@import "modules/footer";
-@import "modules/header";
-@import "modules/select-birthday";
-@import "modules/select-prefecture";
-@import "modules/side_bar";
+@import "modules/*";
 @import "items/index";
-@import "users/show";
-@import "users/edit";
+@import "users/*";
