--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -1,6 +1,6 @@
 .body{
   width: 100vw;
-  background-color: #f5f5f5;
+  background-color: $mainBackgroundGray;
   padding-bottom: 40px;
   &__top-banner{
     margin: 0 auto;
@@ -31,7 +31,7 @@
         text-align: center;
         .pickup-content__title-link{
           font-size: 18px;
-          color: #0099e8;
+          color: $lightBlue;
           text-decoration: none;
           font-weight: bold;
         }
@@ -44,7 +44,7 @@
           height: 330px;
           float: left;
           margin: 0 0 0 20px;
-          background-color: #FFFFFF;
+          background-color: $white;
           .pickup-content__title-link{
             text-decoration: none;
             color: #333;
