--- a/app/assets/stylesheets/modules/_select-birthday.scss
+++ b/app/assets/stylesheets/modules/_select-birthday.scss
@@ -5,7 +5,7 @@
   width: 140px;
   padding: 0 16px;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid $gray;
   background: 0;
   font-size: 16px;
   line-height: 1.5;
