--- a/app/assets/stylesheets/modules/_select-prefecture.scss
+++ b/app/assets/stylesheets/modules/_select-prefecture.scss
@@ -2,7 +2,7 @@
   height: 48px;
   padding-left: 16px;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid $gray;
   background: 0;
   font-size: 16px;
   line-height: 1.5;
