--- a/app/assets/stylesheets/modules/_side_bar.scss
+++ b/app/assets/stylesheets/modules/_side_bar.scss
@@ -9,10 +9,10 @@
   &-global{
     &__list{
       font-size: 14px;
-      background-color: #FFFFFF;
+      background-color: $white;
       padding: 16px;
       height: 16px;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid $btnMailGray;
       .my-page-nav-global__list-link{
         text-decoration: none;
         color:#333;
@@ -25,7 +25,7 @@
     }
     &__list-noline{
       font-size: 14px;
-      background-color: #FFFFFF;
+      background-color: $white;
       padding: 16px;
       height: 16px;
       .my-page-nav-global__list-link{
