--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -22,7 +22,7 @@
           clear: both;
           width: 700px;
           height: 156px;
-          background: url(backprof.png);
+          background-image: image-url("backprof.png");
           background-size: 100%;
           &__img-tag{
             width: 60px;
