edit show.html.haml add class
・クラスの仮置き
・clearfixのmixin作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "font-awesome";
 @import "config/colors";
 @import "modules/*";
-@import "items/index";
+@import "mixin/*";
+@import "items/*";
 @import "users/*";
 @import "devise/*";
