--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -5,8 +5,22 @@
 
 / ここからメインエリアですプルリクエスト前に削除
 
-
-
+.item-page__body
+  .item-page__body-container
+    %h1.item-content__title 正規品！COACH【コーチ】★★大きめ ミニシグネチャー ショルダーバッグ
+    .item-content
+      .item-content__photo
+      .item-content__table
+    .item-price-box
+    .item-buy-btn
+    .item-description
+    .item-button-container
+  .item-page__body-message
+  .item-page__body-nav-link
+  .item-page__body-social-box
+  .item-page__body-items-container
+    .items-content
+    .items-content
 
 / ここからフッターですープルリクエスト前に削除
 = render "items/footer"
