--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -16,8 +16,9 @@
     .item-content{
       @include clearfix;
       margin: 16px 0 0;
+      min-height: 375px;
+      max-height: 375px;
       &__photo {
-        background-color: #40FF00;
         min-width: 300px;
         max-width: 300px;
         min-height: 375px;
@@ -39,10 +40,25 @@
         }
       }
       &__table {
-        background-color: #FF8000;
         min-width: 300px;
         min-height: 375px;
+        max-height: 375px;
         float: right;
+        th {
+          width: 39%;
+          text-align: left;
+          font-weight: 400;
+          background-color: #fafafa;
+          padding: 8px;
+          border: 1px solid #f5f5f5;
+          border-collapse: collapse;
+        }
+        td {
+          width: 61%;
+          padding: 8px;
+          border: 1px solid #f5f5f5;
+          border-collapse: collapse;
+        }
       }
     }
     .item-price-box {
@@ -84,14 +100,38 @@
       @include clearfix;
       margin: 16px 0 0;
       &__leftbox {
-        background-color: #FA58F4;
         float: left;
         height: 30px;
+        &-like {
+          color: #333;
+          border: 1px solid #f5f5f5;
+          background-color: #f5f5f5;
+          display: inline-block;
+          margin-right: 20px;
+          text-decoration: none;
+          border-radius: 40px;
+          padding: 8px;
+        }
+        &-flag {
+          color: #333;
+          border: 1px solid #f5f5f5;
+          background-color: #f5f5f5;
+          display: inline-block;
+          margin-right: 20px;
+          text-decoration: none;
+          border-radius: 40px;
+          padding: 8px;
+        }
       }
       &__rightbox {
-        background-color: #0489B1;
         float: right;
         height: 30px;
+        &-lock {
+          color: #0099e8;
+          display: inline-block;
+          text-decoration: none;
+          padding: 8px;
+        }
       }
     }
   }
@@ -133,12 +173,15 @@
               @include clearfix;
               margin-top: 10px;
               &-left {
+                color: #aaa;
                 float: left;
-                background-color: yellow;
+                p {
+                  display: inline-block;
+                }
               }
               &-right {
+                color: #aaa;
                 float: right;
-                background-color: blue;
               }
             }
           }
