--- a/app/views/items/_message.html.haml
+++ b/app/views/items/_message.html.haml
@@ -7,8 +7,11 @@
       .message-content__item-rightbox-comment
         .message-content__item-rightbox-text テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
         .message-content__item-rightbox-icon
-          .message-content__item-rightbox-icon-left アイコン左側
-          .message-content__item-rightbox-icon-right アイコン右側
+          .message-content__item-rightbox-icon-left
+            =fa_icon "clock"
+            %p 30日
+          .message-content__item-rightbox-icon-right
+            =fa_icon "flag"
   .message-content__item
     .message-content__item-leftbox
       = image_tag("member_photo_noimage_thumb.png", class: "message-content__item-leftbox-user" )
@@ -17,8 +20,11 @@
       .message-content__item-rightbox-comment
         .message-content__item-rightbox-text テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
         .message-content__item-rightbox-icon
-          .message-content__item-rightbox-icon-left アイコン左側
-          .message-content__item-rightbox-icon-right アイコン右側
+          .message-content__item-rightbox-icon-left
+            =fa_icon "clock"
+            %p 30日
+          .message-content__item-rightbox-icon-right
+            =fa_icon "flag"
   .message-content__item
     .message-content__item-leftbox
       = image_tag("member_photo_noimage_thumb.png", class: "message-content__item-leftbox-user" )
@@ -27,8 +33,11 @@
       .message-content__item-rightbox-comment
         .message-content__item-rightbox-text テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
         .message-content__item-rightbox-icon
-          .message-content__item-rightbox-icon-left アイコン左側
-          .message-content__item-rightbox-icon-right アイコン右側
+          .message-content__item-rightbox-icon-left
+            =fa_icon "clock"
+            %p 30日
+          .message-content__item-rightbox-icon-right
+            =fa_icon "flag"
   .message-content__item
     .message-content__item-leftbox
       = image_tag("member_photo_noimage_thumb.png", class: "message-content__item-leftbox-user" )
@@ -37,5 +46,8 @@
       .message-content__item-rightbox-comment
         .message-content__item-rightbox-text テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
         .message-content__item-rightbox-icon
-          .message-content__item-rightbox-icon-left アイコン左側
-          .message-content__item-rightbox-icon-right アイコン右側
+          .message-content__item-rightbox-icon-left
+            =fa_icon "clock"
+            %p 30日
+          .message-content__item-rightbox-icon-right
+            =fa_icon "flag"
