--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,6 @@
 @import "font-awesome";
 @import "config/colors";
 @import "modules/*";
-@import "items/index";
+@import "items/*";
 @import "users/*";
 @import "devise/*";
