--- a/app/assets/stylesheets/devise/_header.scss
+++ b/app/assets/stylesheets/devise/_header.scss
@@ -1,9 +1,12 @@
 .single-header {
   height: 128px;
   text-align: center;
+  h1 {
+    margin-top: 40px;
+    display: inline-block;
+  }
   &__logo {
     width: 185px;
     height: 49px;
-    margin-top: 40px;
   }
 }
