--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -26,13 +26,16 @@
         &-main {
           width: 300px;
           height: 300px;
-          &-large {
-            width: 300px;
-            height: 300px;
-          }
         }
         &-subs {
           @include clearfix;
+          a {
+            float: left;
+            height: 75px;
+            img {
+              height: 75px;
+            }
+          }
           &-small {
             float: left;
             height: 75px;
