--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -4,6 +4,11 @@
   .body__top-banner
     = image_tag("top_banner.png",alt: "top-banner",class: "body__top-banner-picture")
 
+
+
+
+
+  / 以下は触らない
   .body-pickup
     .pickup__title
       ピックアップカテゴリー
