--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -10,7 +10,7 @@
     %h1.item-content__title 正規品！COACH【コーチ】★★大きめ ミニシグネチャー ショルダーバッグ
     .item-content
       .item-content__photo
-        .item-content__photo-main.owl-carousel
+        #sub-slider.item-content__photo-main.owl-carousel
           .item-content__photo-main-item
             = image_tag("m17291744325_1.jpg")
           .item-content__photo-main-item
