feat: add link_to path
リンク先のパスを各ビュー画面に変更。

--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -12,25 +12,23 @@
         ブランドから探す
     .header-bottom--right
       %ul.bottom--right__nav
-        -# = if user_signed_in?
-        -#   %li.header-bottom--right__nav-mypage
-        -#     = link_to "/items" ,class: "header-bottom--right__nav-mypage-link" do
-        -#       .member-photo-dummy
-        -#         = image_tag("member_photo_noimage_thumb.png",alt: "プロフィール",class: "member-photo")
-        -#         .text-mypage
-        -#           マイページ
-        -#   %li.header-bottom--right__nav-news
-        -#     = link_to "/items" ,class: "header-bottom--right__nav-news-link" do
-        -#       = fa_icon 'bell-o', class: "bell"
-        -#       %span お知らせ
-        -#   %li.header-bottom--right__nav-todo
-        -#     = link_to "/items" ,class: "header-bottom--right__nav-todo-link" do
-        -#       = fa_icon 'check',class: "check"
-        -#       %span やることリスト
-        -# = else
-        %li.header-bottom--right__nav-sign-in
-          = link_to "/items" ,class: "sign-in-tag" do
-            ログイン
-        %li.header-bottom--right__nav-sign-up
-          = link_to "/items" ,class: "sign-up-tag" do
-            新規会員登録
+        - if user_signed_in?
+          %li.header-bottom--right__nav-mypage
+            = link_to user_mypage_path ,class: "header-bottom--right__nav-mypage-link" do
+              .member-photo-dummy
+                = image_tag("member_photo_noimage_thumb.png",alt: "プロフィール",class: "member-photo")
+                .text-mypage
+                  マイページ
+          %li.header-bottom--right__nav-news
+            = link_to "#" ,class: "header-bottom--right__nav-news-link" do
+              = fa_icon 'bell-o', class: "bell"
+              %span お知らせ
+          %li.header-bottom--right__nav-todo
+            = link_to "#" ,class: "header-bottom--right__nav-todo-link" do
+              = fa_icon 'check',class: "check"
+              %span やることリスト
+        - else
+          %li.header-bottom--right__nav-sign-in
+            = link_to "ログイン", new_user_session_path ,class: "sign-in-tag"
+          %li.header-bottom--right__nav-sign-up
+            = link_to "新規会員登録", new_user_registration_path ,class: "sign-up-tag"
