--- a/app/views/share/_side_bar.html.haml
+++ b/app/views/share/_side_bar.html.haml
@@ -1,7 +1,7 @@
 .my-page-nav
   %ul.my-page-nav-global
     %li.my-page-nav-global__list
-      = link_to "#",class: "my-page-nav-global__list-link" do
+      = link_to user_mypage_path,class: "my-page-nav-global__list-link" do
         マイページ
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list
@@ -73,7 +73,7 @@
     設定
   %ul.my-page-nav-global
     %li.my-page-nav-global__list
-      = link_to "#" ,class: "my-page-nav-global__list-link" do
+      = link_to user_prof_path ,class: "my-page-nav-global__list-link" do
         プロフィール
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list
@@ -81,7 +81,7 @@
         住所変更
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list-noline
-      = link_to "#" ,class: "my-page-nav-global__list-link" do
+      = link_to user_payment_path ,class: "my-page-nav-global__list-link" do
         支払い方法
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list
@@ -89,7 +89,7 @@
         メール/パスワード
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list
-      = link_to "#" ,class: "my-page-nav-global__list-link" do
+      = link_to "#", class: "my-page-nav-global__list-link" do
         本人情報
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list-noline
@@ -97,6 +97,6 @@
         電話番号の確認
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list
-      = link_to "#" ,class: "my-page-nav-global__list-link" do
+      = link_to user_logout_path ,class: "my-page-nav-global__list-link" do
         ログアウト
         = fa_icon 'chevron-right', class: "bellchevron-right"
