fix: 本人情報ページへ遷移させる
マイページから本人情報ページへ遷移できるように以下を修正。

・ユーザコントローラのアクションをeditからidentificationに変更
・ルーティングもuserのeditからidentificationに変更
・マイページのサードバーのlink_toの引数を本人情報ページへのパスに変更
・ビューのファイル名をアクション名の変更に合わせて修正

--- a/app/views/share/_side_bar.html.haml
+++ b/app/views/share/_side_bar.html.haml
@@ -89,7 +89,7 @@
         メール/パスワード
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list
-      = link_to "#", class: "my-page-nav-global__list-link" do
+      = link_to user_identification_path, class: "my-page-nav-global__list-link" do
         本人情報
         = fa_icon 'chevron-right', class: "bellchevron-right"
     %li.my-page-nav-global__list-noline
